force-app/main/default/objects/Account/fields/NoContact__c.field-meta.xml
<CustomField>
    <fullName>NoContact__c</fullName>
    <label>NoContact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>