force-app/main/default/objects/Account/fields/PatientId__c.field-meta.xml
<CustomField>
    <fullName>PatientId__c</fullName>
    <label>PatientId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>