force-app/main/default/objects/Account/fields/SumOpportunity__c.field-meta.xml
<CustomField>
    <fullName>SumOpportunity__c</fullName>
    <label>SumOpportunity</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>