force-app/main/default/objects/Account/recordTypes/Bussiness_Account.recordType-meta.xml
<RecordType>
    <fullName>Bussiness_Account</fullName>
    <active>true</active>
    <label>Bussiness Account</label>
</RecordType>