force-app/main/default/objects/Account/validationRules/Revenue_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Revenue_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AnnualRevenue  &gt;=  $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c</errorConditionFormula>
    <errorMessage>annual revenue is at least 20 times the minimum spending amount of the Gold Support Tier</errorMessage>
</ValidationRule>